--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Teste</h1>
-  <p>Teste</p>
-  <a href="">link</a>
+  <header">
+    <nav id="primary" class="grid grid-flow-col container">
+      <div>
+        <img src="assets/icons/List.svg" alt="List icon">
+        <strong>Menu</strong>
+      </div>
+      <div>
+        <img src="assets/Logo.svg" alt="Tech News Logo">
+      </div>
+      <div>
+        <strong>Search</strong>
+        <img src="assets/icons/MagnifyingGlass.svg" alt="Search icon">
+      </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col container">
+      <a href="#">Artificial Intelligence</a>
+      <a href="#">Blockchain</a>
+      <a href="#">Holograms</a>
+      <a href="#">Internet</a>
+      <a href="#">Wearables</a>
+      <a href="#">Augmented Reality</a>
+      <a href="#">Virtual Reality</a>
+    </nav>
+  </header>
+
 </body>
 </html>
