finishing the highlight section

--- a/index.html
+++ b/index.html
@@ -46,20 +46,44 @@
           </h2>
         </figcaption>
       </figure>
-
+      
       <div class="grid grid-cols-2 gap-16">
-        <div>
+        <figure class="card">
           <img src="assets/images/Image 02.png" alt="">
-        </div>
-        <div>
+          <figcaption>
+            <span class="content-tag">Holograms</span>
+            <h2 class="text-lg">
+              New 3D Projector Smartphone Hits the Market, Transforming the Way We View Our Screens!
+            </h2>
+          </figcaption>
+        </figure>
+        <figure class="card">
           <img src="assets/images/Image 03.png" alt="">
-        </div>
-        <div>
+          <figcaption>
+            <span class="content-tag">Internet</span>
+            <h2 class="text-lg">
+              6G technology arrives, promising to revolutionize the way we live and communicate.
+            </h2>
+          </figcaption>
+        </figure>
+        <figure class="card">
           <img src="assets/images/Image 04.png" alt="">
-        </div>
-        <div>
+          <figcaption>
+            <span class="content-tag">Wearables</span>
+            <h2 class="text-lg">
+              Company launches smart watch capable of monitoring mental health, offering valuable insights for personal well-being.
+            </h2>
+          </figcaption>
+        </figure>
+        <figure class="card">
           <img src="assets/images/Image 05.png" alt="">
-        </div>
+          <figcaption>
+            <span class="content-tag">Virtual Reality</span>
+            <h2 class="text-lg">
+              Schools embrace VR technology to provide immersive experiences, transforming traditional learning.
+            </h2>
+          </figcaption>
+        </figure>
       </div>
     </section>
   </main>
