--- a/index.html
+++ b/index.html
@@ -86,6 +86,46 @@
         </figure>
       </div>
     </section>
+
+    <section id="weekly">
+      <header class="grid grid-flow-col">
+        <h3>Top reads of the week</h3>
+        <a href="#" class="grid grid-flow-col ">
+          <strong>View all</strong>
+          <span></span>
+        </a>
+      </header>
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag">Vehicles</span>
+          <img src="assets/images/Image 06.png" alt="">
+          <p class="text-xl">
+            Prototype flying vehicle is unveiled, marking the beginning of the era of personal air transportation.
+          </p>
+        </figure>
+        <figure>
+          <span class="content-tag">Holograms</span>
+          <img src="assets/images/Image 07.png" alt="">
+          <p class="text-xl">
+            Video conferencing platform introduces new hologram feature, making virtual calls more realistic and immersive.
+          </p>
+        </figure>
+        <figure>
+          <span class="content-tag">Virtual Reality</span>
+          <img src="assets/images/Image 08.png" alt="">
+          <p class="text-xl">
+            New generation of video game consoles is launched, bringing ultra-realistic graphics and fully immersive gaming experiences.
+          </p>
+        </figure>
+        <figure>
+          <span class="content-tag">Internet</span>
+          <img src="assets/images/Image 09.png" alt="">
+          <p class="text-xl">
+            Project seeks to offer high-speed internet in remote areas via satellites.
+          </p>
+        </figure>
+      </div>
+    </section>
   </main>
 </body>
 </html>
