--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img src="assets/images/Image 02.png" alt="">
           <figcaption>
             <span class="content-tag">Holograms</span>
-            <h2 class="text-lg">
+            <h2 class="text-lg line-clamp-3">
               New 3D Projector Smartphone Hits the Market, Transforming the Way We View Our Screens!
             </h2>
           </figcaption>
@@ -61,7 +61,7 @@
           <img src="assets/images/Image 03.png" alt="">
           <figcaption>
             <span class="content-tag">Internet</span>
-            <h2 class="text-lg">
+            <h2 class="text-lg line-clamp-3">
               6G technology arrives, promising to revolutionize the way we live and communicate.
             </h2>
           </figcaption>
@@ -70,7 +70,7 @@
           <img src="assets/images/Image 04.png" alt="">
           <figcaption>
             <span class="content-tag">Wearables</span>
-            <h2 class="text-lg">
+            <h2 class="text-lg line-clamp-3">
               Company launches smart watch capable of monitoring mental health, offering valuable insights for personal well-being.
             </h2>
           </figcaption>
@@ -79,7 +79,7 @@
           <img src="assets/images/Image 05.png" alt="">
           <figcaption>
             <span class="content-tag">Virtual Reality</span>
-            <h2 class="text-lg">
+            <h2 class="text-lg line-clamp-3">
               Schools embrace VR technology to provide immersive experiences, transforming traditional learning.
             </h2>
           </figcaption>
@@ -91,7 +91,7 @@
       <header class="grid grid-flow-col">
         <h3>Top reads of the week</h3>
         <a href="#" class="grid grid-flow-col ">
-          <strong>View all</strong>
+          <p>View all</p>
           <span></span>
         </a>
       </header>
@@ -99,28 +99,28 @@
         <figure>
           <span class="content-tag">Vehicles</span>
           <img src="assets/images/Image 06.png" alt="">
-          <p class="text-xl">
+          <p class="text-xl line-clamp-3">
             Prototype flying vehicle is unveiled, marking the beginning of the era of personal air transportation.
           </p>
         </figure>
         <figure>
           <span class="content-tag">Holograms</span>
           <img src="assets/images/Image 07.png" alt="">
-          <p class="text-xl">
+          <p class="text-xl line-clamp-3">
             Video conferencing platform introduces new hologram feature, making virtual calls more realistic and immersive.
           </p>
         </figure>
         <figure>
           <span class="content-tag">Virtual Reality</span>
           <img src="assets/images/Image 08.png" alt="">
-          <p class="text-xl">
+          <p class="text-xl line-clamp-3">
             New generation of video game consoles is launched, bringing ultra-realistic graphics and fully immersive gaming experiences.
           </p>
         </figure>
         <figure>
           <span class="content-tag">Internet</span>
           <img src="assets/images/Image 09.png" alt="">
-          <p class="text-xl">
+          <p class="text-xl line-clamp-3">
             Project seeks to offer high-speed internet in remote areas via satellites.
           </p>
         </figure>
