--- a/index.html
+++ b/index.html
@@ -126,6 +126,148 @@
         </figure>
       </div>
     </section>
+
+    <section id="ai">
+      <header class="grid grid-flow-col">
+        <h3>Artificial Intelligence Highlights</h3>
+        <a href="#" class="grid grid-flow-col ">
+          <p>View all</p>
+          <span></span>
+        </a>
+      </header>
+      <div class="grid gap-32">
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Artificial Intelligence</span>
+            <h3 class="text-xl">
+              Company surprises the world by announcing an algorithm capable of predicting future events with high accuracy.
+            </h3>
+            <p class="text-sm line-clamp-4">
+              Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até planejamento estratégico.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 10.png" alt="">
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Artificial Intelligence</span>
+            <h3 class="text-xl">
+              Portable device promises to instantly translate different languages, facilitating global communication.
+            </h3>
+            <p class="text-sm line-clamp-4">
+              Em um mundo cada vez mais conectado, a comunicação sem fronteiras é essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro herói linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se comunicar fluentemente em qualquer lugar do mundo, independentemente do idioma local. Este dispositivo não é mais uma visão futurista, mas uma realidade impressionante que está transformando a forma como nos conectamos globalmente. Nesta reportagem, mergulharemos nas funcionalidades deste dispositivo revolucionário e como ele está moldando uma nova era de compreensão global.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 11.png" alt="">
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Artificial Intelligence</span>
+            <h3 class="text-xl">
+              Created to assist the elderly, companion robots are gaining popularity, offering emotional and physical support to users.
+            </h3>
+            <p class="text-sm line-clamp-4">
+              A tecnologia não só avança, mas também busca tornar a vida mais significativa para todas as gerações. No cenário atual, os robôs sociais, projetados especialmente para oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros assistentes, esses robôs são programados para fornecer suporte emocional e físico, preenchendo lacunas nas necessidades de cuidado. Nesta matéria, exploraremos como esses companheiros tecnológicos estão impactando positivamente a qualidade de vida da terceira idade e proporcionando uma nova perspectiva sobre o envelhecimento.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 12.png" alt="">
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <span class="content-tag">Artificial Intelligence</span>
+            <h3 class="text-xl">
+              Application uses artificial intelligence to help users stay focused and increase productivity in their daily lives.
+            </h3>
+            <p class="text-sm line-clamp-4">
+              In the hustle and bustle of modern life, where distractions abound, an innovative app has emerged as an indispensable ally for those seeking greater concentration and efficiency in their daily lives. Using advanced artificial intelligence algorithms, this app promises to do more than simply manage tasks; it is programmed to understand each user’s work patterns, offering personalized suggestions to optimize time and maximize productivity. In this article, we will explore how this technological tool is becoming the key to maintaining focus in a world increasingly full of distractions, transforming the way we approach our daily responsibilities.
+            </p>
+          </div>
+          <div>
+            <img src="assets/images/Image 13.png" alt="">
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <div>
+      <div id="ads">
+        <img src="assets/Ads.png" alt="">
+      </div>
+
+      <section id="more">
+        <header class="grid grid-flow-col">
+        <h3>Did you see this?</h3>
+        <a href="#" class="grid grid-flow-col ">
+          <p>View all</p>
+          <span></span>
+        </a>
+      </header>
+      <div class="grid gap-32">
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <img src="assets/images/Image 14.png" alt="Environmental monitoring application gains prominence">
+          </div>
+          <div>
+            <span class="content-tag">Software</span>
+            <h3 class="text">
+              Environmental monitoring application gains prominence, encouraging ecological practices and promoting awareness.
+            </h3>
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <img src="assets/images/Image 15.png" alt="Virtual reality glasses with haptic feedback provide a complete sensory experience">
+          </div>
+          <div>
+            <span class="content-tag">Virtual Reality</span>
+            <h3 class="text">
+              Virtual reality glasses with haptic feedback provide a complete sensory experience, immersing users in digital environments.
+            </h3>
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <img src="assets/images/Image 16.png" alt="A new digital currency based on sustainable technologies emerges">
+          </div>
+          <div>
+            <span class="content-tag">Cryptocurrencies</span>
+            <h3 class="text">
+              A new digital currency based on sustainable technologies emerges, seeking to minimize the environmental impact associated with cryptocurrency mining.
+            </h3>
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <img src="assets/images/Image 17.png" alt="E-commerce companies deploy fleets of drones for fast deliveries">
+          </div>
+          <div>
+            <span class="content-tag">Drones</span>
+            <h3 class="text">
+              E-commerce companies deploy fleets of drones for fast deliveries, transforming the online commerce landscape.
+            </h3>
+          </div>
+        </article>
+        <article class="grid grid-flow-col gap-16">
+          <div>
+            <img src="assets/images/Image 18.png" alt="Innovative technology allows 3D printing of human organs">
+          </div>
+          <div>
+            <span class="content-tag">#D Printing</span>
+            <h3 class="text">
+              Innovative technology allows 3D printing of human organs, revolutionizing medicine and the transplant waiting list.
+            </h3>
+          </div>
+        </article>
+
+      </div>
+      </section>
+    </div>
   </main>
 </body>
 </html>
