add css to final section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header">
-    <nav id="primary" class="grid grid-flow-col container">
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
       <div>
         <img src="assets/icons/List.svg" alt="List icon">
         <strong>Menu</strong>
@@ -24,7 +24,7 @@
         <img src="assets/icons/MagnifyingGlass.svg" alt="Search icon">
       </div>
     </nav>
-    <nav id="secondary" class="grid grid-flow-col container">
+    <nav id="secondary" class="grid grid-flow-col">
       <a href="#">Artificial Intelligence</a>
       <a href="#">Blockchain</a>
       <a href="#">Holograms</a>
@@ -195,7 +195,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -215,7 +215,7 @@
           </div>
           <div>
             <span class="content-tag">Software</span>
-            <h3 class="text">
+            <h3 class="text-lg line-clamp-2">
               Environmental monitoring application gains prominence, encouraging ecological practices and promoting awareness.
             </h3>
           </div>
@@ -226,7 +226,7 @@
           </div>
           <div>
             <span class="content-tag">Virtual Reality</span>
-            <h3 class="text">
+            <h3 class="text-lg line-clamp-2">
               Virtual reality glasses with haptic feedback provide a complete sensory experience, immersing users in digital environments.
             </h3>
           </div>
@@ -237,7 +237,7 @@
           </div>
           <div>
             <span class="content-tag">Cryptocurrencies</span>
-            <h3 class="text">
+            <h3 class="text-lg line-clamp-2">
               A new digital currency based on sustainable technologies emerges, seeking to minimize the environmental impact associated with cryptocurrency mining.
             </h3>
           </div>
@@ -248,7 +248,7 @@
           </div>
           <div>
             <span class="content-tag">Drones</span>
-            <h3 class="text">
+            <h3 class="text-lg line-clamp-2">
               E-commerce companies deploy fleets of drones for fast deliveries, transforming the online commerce landscape.
             </h3>
           </div>
@@ -259,7 +259,7 @@
           </div>
           <div>
             <span class="content-tag">#D Printing</span>
-            <h3 class="text">
+            <h3 class="text-lg line-clamp-2">
               Innovative technology allows 3D printing of human organs, revolutionizing medicine and the transplant waiting list.
             </h3>
           </div>
@@ -267,7 +267,7 @@
 
       </div>
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 </html>
